ATS/main/default/objects/Skill_Resource__c/Skill_Resource__c.object-meta.xml
<CustomObject>
    <label>Skill Resource</label>
    <nameField>
        <displayFormat>JuncId{00000}</displayFormat>
        <label>Junc Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>