ATS/main/default/objects/Skill_Resource__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <length>200</length>
    <type>Text</type>
</CustomField>