ATS/main/default/objects/Skill_Resource__c/fields/Experience_Formula__c.field-meta.xml
<CustomField>
    <fullName>Experience_Formula__c</fullName>
    <formula>IF(ISBLANK(End_date__c),(Text(FLOOR(((YEAR(TODAY())-Value(RIGHT(Start_date__c,4)))* 12
+ MONTH(TODAY())
- Value(LEFT( Start_date__c,2)))/12)) &amp; &quot; Years &quot; &amp;

Text(MOD((YEAR(TODAY())-Value(RIGHT(Start_date__c,4)))* 12
+ MONTH(TODAY())
- Value(LEFT( Start_date__c,2)),12))&amp; &quot; Months &quot;), (Text(FLOOR(((Value(RIGHT(End_date__c ,4))-Value(RIGHT(Start_date__c,4)))* 12
+ Value(LEFT( End_date__c,2))
- Value(LEFT( Start_date__c,2)))/12)) &amp; &quot; Years &quot; &amp;

Text(MOD((Value(RIGHT(End_date__c ,4))-Value(RIGHT(Start_date__c,4)))* 12
+ Value(LEFT( End_date__c,2))
- Value(LEFT( Start_date__c,2)),12))&amp; &quot; Months &quot;) )</formula>
    <label>Experience Formula</label>
    <type>Text</type>
</CustomField>