ATS/main/default/objects/Skill_Resource__c/fields/Level_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Experience__c</fullName>
    <label>Level of Experience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>