ATS/main/default/objects/Skill_Resource__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>Resource__r.Name</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>