ATS/main/default/objects/Skill_Resource__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <formula>Skill__r.Name</formula>
    <label>Skill Name</label>
    <type>Text</type>
</CustomField>