ATS/main/default/objects/Skill_Resource__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <inlineHelpText>MM/YYYY</inlineHelpText>
    <label>Start date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>