ATS/main/default/objects/Skill_Resource__c/fields/Version_Release__c.field-meta.xml
<CustomField>
    <fullName>Version_Release__c</fullName>
    <label>Version/Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>