ATS/main/default/objects/Skill_Resource__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(End_date__c),false,(OR(OR(VALUE(LEFT(  End_date__c   ,2)) &gt;12,VALUE(LEFT(  End_date__c   ,2))   &lt;= 00),IF( YEAR( TODAY())   &lt;  VALUE( RIGHT( End_date__c   , 4)),true,false),IF( YEAR(TODAY()) = VALUE(RIGHT(  End_date__c   , 4)),IF(MONTH(TODAY()) &lt; VALUE(LEFT( End_date__c   , 2)),true, false), false),NOT(REGEX( End_date__c  , &apos;[0-1][0-9]/[2][0][0-9]{2}&apos;)))) )</errorConditionFormula>
    <errorMessage>Format should be MM/YYYY , Year and Month should not be the future. &quot;Check End Date&quot;</errorMessage>
</ValidationRule>