ATS/main/default/objects/Skill_Resource__c/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Start_date__c)),OR(OR(VALUE(LEFT( Start_date__c  ,2)) &gt;12,VALUE(LEFT(  Start_date__c  ,2))   &lt;= 00),IF( YEAR( TODAY())   &lt;  VALUE( RIGHT( Start_date__c  , 4)),true,false),IF( YEAR(TODAY()) = VALUE(RIGHT(  Start_date__c  , 4)),IF(MONTH(TODAY()) &lt; VALUE(LEFT( Start_date__c  , 2)),true, false), false),NOT(REGEX( Start_date__c , &apos;[0-1][0-9]/[2][0][0-9]{2}&apos;))))</errorConditionFormula>
    <errorMessage>Format should be MM/YYYY , year and month should not be the future</errorMessage>
</ValidationRule>