ATS/main/default/objects/Skill_Resource__c/validationRules/Start_Year_and_End_Year_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Year_and_End_Year_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE( RIGHT(   Start_date__c  , 4) ) &gt;  
 VALUE( RIGHT( End_date__c , 4) )</errorConditionFormula>
    <errorMessage>Start Year should not be greater than End Year</errorMessage>
</ValidationRule>