ATS/main/default/objects/Skill_Resource__c/validationRules/Startdate_and_Experience_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Startdate_and_Experience_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Start_date__c ), ISBLANK( Experience__c ))</errorConditionFormula>
    <errorMessage>Either Start Date or Experience need to be filled</errorMessage>
</ValidationRule>