ATS/main/default/objects/Skill_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Skill__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>